--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,8 +22,8 @@ spring:
   # 空间图片分表
   shardingsphere:
     datasource:
-      names: yun_picture  #首先我们指定逻辑表的名称，我们的库名
-      yun_picture:  #配置数据库的连接，和我们实际数据库配置一样，这里再配置一次
+      names: yun_picture  # 我们的库名
+      yun_picture:  # 配置数据库的连接，和我们实际数据库配置一样，这里再配置一次
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://localhost:3306/yun_picture
@@ -41,14 +41,14 @@ spring:
             # 所以此处将 actual-data-nodes 就随便设置了，设置为一个逻辑表就好了
             table-strategy:
               standard:
-                sharding-column: spaceId  #我们要指定分表是根据 spaceId 这一列来分表的，Picture 就是有 spaceId 这一列，我们可以通过 spaceId 把图片存到不同的表里
-                sharding-algorithm-name: picture_sharding_algorithm  # 使用自定义分片算法，我们就自定义实现这个算法
+                sharding-column: spaceId  #我们要指定分表是根据 spaceId 这一列来分表的，Picture 表就是有 spaceId 这一列，我们可以通过 spaceId 把图片存到不同的表里
+                sharding-algorithm-name: picture_sharding_algorithm  # 使用自定义分片算法，下面我们就自定义实现这个算法
         sharding-algorithms:
           picture_sharding_algorithm:
-            type: CLASS_BASED  #基于类来自定义算法，因为这个算法是需要我们自己写一些策略，所以基于类去实现，就不基于内置的了
+            type: CLASS_BASED  #基于类来自定义算法，因为这个算法是需要我们自己写一些策略，所以基于类去实现，就不基于内置的了，内置的应该是取模啊那些
             props:
               strategy: standard  #标准策略
-              algorithmClassName: com.air.yunpicturebackend.manager.sharding.PictureShardingAlgorithm  #我们要定义一个图片分表算法实现类，
+              algorithmClassName: com.air.yunpicturebackend.manager.sharding.PictureShardingAlgorithm  #我们要定义一个图片分表算法实现类
     props:
       sql-show: true  #开发阶段可以开启，能够打印出实际执行的 sql ，但生产环境就不开了，不然日志会特别多
 
